# My-Library

./: Makefile  README.md  pyproject.toml
_project_/: admin.py  settings.py  urls.py
_project_/templates/: index.html
_project_/templates/books/: list.html  list_borrow.html  my_books.html
_project_/templates/forms/: form.html  librarian_form.html
_project_/templates/includes/: nav.html
_project_/templates/users/: create.html
apps/api/: urls.py
apps/api/v1/: urls.py  views.py
apps/books/: models.py  views.py
apps/books/migrations/: 0001_initial.py  0002_book_returned_date.py  0002_initial.py  0003_alter_book_borrowed_by.py  0003_remove_book_returned_date.py  0004_alter_book_options.py
apps/users/: forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
core/: mixins.py
