[tool.poetry]
name = "librarytest"
version = "0.1.0"
description = ""
authors = ["Denis <ad.way@mail.ri>"]
readme = "README.md"
packages = [{include = "_project_"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
django-bootstrap5 = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
