[tool.poetry]
name = "librarytest"
version = "0.1.0"
description = ""
authors = ["Denis <ad.way@mail.ri>"]
readme = "README.md"
packages = [{include = "_project_"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
django-bootstrap5 = "^24.2"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
dj-database-url = "^2.2.0"
python-dotenv = "^1.0.1"
django-simple-history = "^3.7.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
